Cacti CHANGELOG

-issue#2188: SNMP timeout errors are being duplicated
-issue#2191: i18n_themes is not properly primed in global_arrays.php

1.2.0 Beta 4
-issue#2186: Boost generates invalid SQL during on demand update
-issue#2182: Graph View missing 'html_graph_template_multiselect()' function

1.2.0 Beta 3
-issue#2002: api_plugin_db_table_create should support non-string defaults
-issue#2126: api_device.php generates undefined function poller_push_to_remote_db_connect()
-issue#2127: Unable to save error when duplicating graph
-issue#2135: api_tree_lock() and api_tree_unlock() forcing redirection incorrectly
-issue#2143: export.php Illegal string offset 'method'
-issue#2144: Device Management "Status" column does not sort properly
-issue#2152: When editing a device, should show disable/enable option
-issue#2153: Utilities page issues the wrong hook for tabs
-issue#2163: LDAP functions are not consistent
-issue#2164: Login page does not remember selected realm
-issue#2171: datepicker and timepick translation not available
-issue#2178: Header/Footer included more than once
-issue: Unable to display user profile tabs
-feature:#2173: Introduce Device and Graph Template Caching to Speed UI
-feature: Update JavaScript library jstree.js to 3.3.7

1.2.0 Beta 1
-security#1882: Bypass output validation in select cases
-issue#186: Cacti does not support jQueryUI 1.12.x
-issue#187: Remove the use of jQuery Migrate plugin
-issue#454: Cacti Re-Index does not resolve index changes properly during re-index 
-issue#983: Import Template Preview is misleading
-issue#1072: CVE-2009-4112 with regard to exploiting Data Input methods
-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue#1174: Disable drag and drop when tree is not in edit mode
-issue#1200: Aggregate Graphs can not include some classes of COMMENT
-issue#1298: Prevent system running if system log is not writable