@@ -2,6 +2,7 @@ Cacti CHANGELOG
 
 -issue#2188: SNMP timeout errors are being duplicated
 -issue#2191: i18n_themes is not properly primed in global_arrays.php
+-issue#2202: Can't create more than one graph with add_graphs.php from one template
 
 1.2.0 Beta 4
 -issue#2186: Boost generates invalid SQL during on demand update
